@@ -77,7 +77,7 @@ public interface PrintService
    * @throws IllegalArgumentException if category is not a class that
    * implements <code>PrintServiceAttribute</code>
    */
-  PrintServiceAttribute getAttribute(Class category);
+  <T extends PrintServiceAttribute> T getAttribute(Class<T> category);
   
   /**
    * Returns all attributes of this printer service
@@ -97,7 +97,7 @@ public interface PrintService
    * @throws IllegalArgumentException if <code>category</code> is a class
    * not implementing <code>Attribute</code> 
    */
-  Object getDefaultAttributeValue(Class category);
+  Object getDefaultAttributeValue(Class<? extends Attribute> category);
   
   /**
    * Returns the name of this print service.
@@ -118,7 +118,7 @@ public interface PrintService
    * 
    * @return an array of all supported attribute categories
    */
-  Class[] getSupportedAttributeCategories();
+  Class<?>[] getSupportedAttributeCategories();
   
   /**
    * Returns all supported attribute values a client can use when setting up
@@ -137,7 +137,9 @@ public interface PrintService
    * implementing <code>Attribute</code>, or if <code>flavor</code> is not
    * supported
    */
-  Object getSupportedAttributeValues(Class category, DocFlavor flavor, AttributeSet attributes);
+  Object getSupportedAttributeValues(Class<? extends Attribute> category,
+                                     DocFlavor flavor,
+                                     AttributeSet attributes);
   
   /**
    * Returns an array of all supproted document flavors.
@@ -179,7 +181,7 @@ public interface PrintService
    * @throws IllegalArgumentException if <code>category</code> is a class not
    * implementing <code>Attribute</code>.
    */
-  boolean isAttributeCategorySupported(Class category);
+  boolean isAttributeCategorySupported(Class<? extends Attribute> category);
   
   /**
    * Determines a given attribute value is supported when creating a print job
